Angepasst an Kommentare

--- a/summaries/deddebme/psp/ErsterVersuch.mdx
+++ b/summaries/deddebme/psp/ErsterVersuch.mdx
@@ -4,7 +4,7 @@ description: Wie macht man das?
 author: Nils Eisenach, Adrian Schmitz
 date: 20/06/2024
 order: 3
-tags: [PSP, Versuch 1, ATmega 644, ADDA, DAW, DAC]
+tags: [PSP, Versuch 1, ATmega 644, ADDA, DAW, DAC, ADC]
 ---
 
 # Einstellbare Spannungsquelle
@@ -14,10 +14,10 @@ Wir, die HTWR übernehmen keine Verantwortung der Vollständigkeit noch der Rich
 Das ist dieser Kasten neben euren PC der zwei Knaufe hat und euch erlaubt eine Spannung selbst einzustellen. Es mag verlockend sein die Knaufe auf Anschlag nach rechts zu drehen, aber: DONT!.
 
 ## Sicherheit für euch, und die Hiwis und vor allem dem Microcontroller
-Bitte dreht den Spannungsregler (das ist dieser Linke Knauf an der Spannungsquelle) auf maximal 6 V (Volt). Mehr brauchen wir nicht. Den Rechten Regler müsst ihr so einstellen das wir ungefähr 200 mA (Miliampere) haben. Stellt ihr mehr Stromstärke oder Spannung ein könnt ihr potenziell das Board kaputt machen! Lasst es einfach. Fragt einen Hiwi wenn ihr nicht sicher seid.
+Bitte dreht den Spannungsregler (das ist dieser Linke Knauf an der Spannungsquelle) auf **maximal** 6 V (Volt), 5 V reichen aber komplett aus! Mehr brauchen wir nicht. Den Rechten Regler müsst ihr so einstellen das wir ungefähr 200 mA (Miliampere) haben. Stellt ihr mehr Stromstärke oder Spannung ein könnt ihr potenziell das Board kaputt machen! Lasst es einfach. Fragt einen Hiwi wenn ihr nicht sicher seid.
 
 ## Wie stelle ich das jetzt aber ein?
-In der roten Box findet ihr zwei Kabel, Blau und Rot. Konvention in der Elektrotechnik ist: Rot ist Plus, Blau ist Minus. Zudem habt ihr noch ein drittes rotes Kabel das nicht wie die anderen beiden aussieht. Das braucht ihr um die Stromstärke richtig einzustellen.
+In der roten Box findet ihr zwei Kabel, Blau/Schwarz und Rot. Konvention in der Elektrotechnik ist: Rot ist Plus, Blau/Schwarz ist Minus. Zudem habt ihr noch ein drittes rotes Kabel das nicht wie die anderen beiden aussieht. Das braucht ihr um die Stromstärke richtig einzustellen.
 
 
 # W***AD DA***S
