--- a/summaries/deddebme/psp/ichHabProbleme.mdx
+++ b/summaries/deddebme/psp/ichHabProbleme.mdx
@@ -16,6 +16,9 @@ tags: [PSP, ATmega 644]
   2. Schritt 1 + Strom trennen ($10s$)
   3. Schritt 2 + Programm neustarten
   4. Bei Hiwis melden
+- Hieroglyphen oder so auf dem LCD(isplay)
+  - Irgendwo doppel gemoppelt und os_error einen PSTR("Dein String") übergeben
+  - Einen einfachen String an os_errorPSTR übergeben
 
 # Endlose Probleme (Hängt in Schleife)
 - Ist die Endbedingung ein Wert, den die Iterationsvariable nicht annhemen kann?
