a bunch of stuff

--- a/blog/01.mdx
+++ b/blog/01.mdx
@@ -1,7 +1,78 @@
 ---
-title: schnell Reich werden
+title: HTWR goes (semi) legal
 ---
 
-# So geht es...
+    # HTWR goes (semi) legal
 
-Also...
+    HTWR ist eine Grauzone (sehr dunkel grau :/) mit Folien, (keine Klausuren natürlich 🫣)...
+    Was wir/(ich mach die Webseite immernoch größtenteils alleine :/) in Zukunft machen ist unten beschrieben.
+
+    Aber erstmal ein kleiner Rant
+
+    ## **Das sollte nicht so sein**
+
+    > Ich finde es einfach unfair Altklausuren als Lehrstuhl nicht zu veröffentlich, obwohl es praktisch ist Aufgaben zu wiederholen. Warum?
+
+    Es ist so, dass Altklausuren (selbst Gedächtnissprotokollen) eine erhebliche Hilfe und schlichtweg die beste Klausurvorbereitungen sind **Punkt**.
+    Ich glaube den Fakt zweifelt niemand an.
+
+    Auch das immer Altklausuren gesammelt und verteilt werden lässt sich nicht ganz verhindern.
+    Studierenden in Gruppen mit vielen Kontakten z.B. in frühere Semester haben einfach schlicht einen Vorteil.
+
+    > PS. Das war auch schon in der Schule so. Ich würde gerne mal Wissen wie viel besser Leute mit älteren Brüdern und Schwerstern bei dem gleichen Lehrer oder Lehrerinn im Durchschnitt sind.
+
+    ## Warum so wenige Klausuren?
+
+    Warum so wenige Klausuren von den Lehrstühlen veröffentlicht werden:
+      1. Natürlich sind Klausuren viel Arbeit und Aufgaben zu wiederholen, direkt oder in abgewandelter Form ist dann natürlich simpler.
+
+
+      2. Lernt den Inhalt nicht die Übung.
+        ![Ja aber Nein](https://media.tenor.com/CnV-C65z7iMAAAAi/theoretically-no.gif)
+
+          Das Problem an dem Argument:
+
+          _Learning by Doing_.
+
+          Außerdem in der Klausur wird ja auch nicht das pure Wissen an sich abgefragt, sondern in einer bestimmten Form (anhand der Übungen, Schemaaufgaben, etc.).
+          Es ergibt also schon Sinn diese zu Lernen um eine gute Klausur zu schreiben.
+
+          Niemand kann 1850 Seiten MaLe Folien auswendig und kann danach den InductiveMiner perfekt anwenden.
+          Hierfür braucht es Übung und eine Aufgabe auf dem Übungsblatt ohne Trickfragen reicht halt meistens nicht aus.
+
+    ## Fachschaft!
+
+    Grundsätzlich sollte sich die Fachschaft drum kümmern ein faireren Umgang mit Altklausuren zu ermöglichen.
+    Sie können keinen Lehrstuhl zwingen, aber wenigstens als Represent der Studierendenschaft (auch der weniger Vernetzten)
+    die Lehrstühle nerven.
+
+    ## Was machen wir jetzt
+
+    Ich habe keine Lust mehr im Impressum einer ähmm _kritischen_ Webseite zu stehen. Ich möchte legal, oder zumindest grauzonen legal werden.
+
+    > Noch habe ich keine Unterlassungserklärung bekommen, aber das soll so bleiben. Ich habe aktuell nur den Vorteil nicht kommerziell zu arbeiten (das soll auch so bleiben).
+    > Ich habe deswegen bereits die Klausurserver momentan abgeschaltet
+
+    Ich werde ein HTWR-Gedächtnissprotokolltemplate (`typst`, `latex`, `docx`, `odt`) erstellen. Das sollte gut genug aussehen, aber die genauen Formate der Klausuren sind ja eh egal
+    (das `typst` template ist bereits fast fertig im [exams repo](https://github.com/htwr-aachen/exams)).
+
+    Dann wird systematisch jede Klausur / ob schlechtes Gedächtnissprotokoll oder echte Altklausur in dieses Format übertragen und *variert*.
+    Wir werden nicht blank abkopieren, aber die Zahlen sollen weiterhin stimmen.
+
+    Das ist mehr Aufwand. Aber es wird sich lohnen. Nicht für umbedingt uns aber für spätere.
+
+
+    ## *BITTE HELFT Mir*
+
+    Fragt gerne bei [mitmachen@htwr-aachen.de](mailto:mitmachen@htwr-aachen.de)
+    nach. Ich sage euch, dann was und wie ihr mithelfen könnt.
+
+    Zum Beispiel einfach loslegen eine Klausur / oder ein neue Klausuren protokollieren.
+
+    ## Apropro
+    Gleichzeitig zu diesem Blog, werde ich die erste so richtige Dokumentation von HTWR anfangen.
+
+    Ich werde vieles auf der Webseite ein bisschen umstrukturieren und neu designen.
+    Neue Features sind *immer* willkommen, Memepages, Stickersammlung, Catbots, etc...
+
+    Ihr müsst nur ein bisschen Mut mitbringen um neue Dinge (React, Typescript) zu lernen.
