--- a/docs/frontend.mdx
+++ b/docs/frontend.mdx
@@ -9,7 +9,7 @@ title: Frontend Docs
 Gehe zurück auf Start und nehme 100 $ von der Bank
 
 - [Einführung HTWR Frontend development](/docs/frontend/intro)
-- [Sehr nützliche Components](/docs/frontend/components)
+- [Nützliche Components](/docs/frontend/components)
 
 #### Wie mache ich etwas richtig?
 
@@ -22,3 +22,7 @@ Aber zunächst angefangen mit den URLs:
 
 Es gibt für viele Aktionen einzelne Guides. Fürs erstellen eines neuen Lehrstuhls, Fachs oder Zusammenfassung etc..
 [Hier](/docs/guides).
+
+Vor allem:
+
+- [Neues Fach Hinzufügen](/docs/guides/neues-fach)
