--- a/docs/frontend/url-spezifikation.mdx
+++ b/docs/frontend/url-spezifikation.mdx
@@ -4,7 +4,7 @@ title: URL Definition
 
 # NEUE URL Spezifikation
 
-Ich will jetzt deutlich stabiliere api und url-definitionen haben.
+Ich will jetzt deutlich stabilere API und URL-Definitionen haben.
 
 Noch sind wenige Fächer auf der neuen API, aber das wird sich schnell ändern:
 
@@ -21,12 +21,14 @@ Zudem noch:
 - `/panikzettel/[subject].pdf`: Download eines Panikzettel für ein Fach
 - `/blog`: Mein HTWR blog
 - `/docs`: Ihr seid gerade da.
-- `/...`: Alle möglichen kleinen/rechtlichen Sachen und eventuell ein paar Eastereggs
+- `/...`: Alle möglichen kleinen/rechtlichen Sachen und eventuell ein paar Easter-eggs
 
-## ALTE
+## Veraltet (Deprecated)
+
+Die neue URL specs werden langsam umgesetzt. Ich versuche die alten Links funktional zu halten. (Keine Garantie)
 
 - `/`: root HTWR Seite
 - `/[institute]`: Die Seite eines Faches. Memes und so
-- `/[institute]/studium`: Die Seite eines Faches. Individuelle Memes. Wurde manchmal geskipped
+- `/[institute]/studium`: Die Seite eines Faches. Individuelle Memes. Wurde manchmal übersprungen
 - `/[institute]/studium/aufgaben`: Material für ein Fach
 - `/[institute]/studium/teachings`: Zusammenfassungen für ein Fach und Folien-Merge und so...
