--- a/docs/guides.mdx
+++ b/docs/guides.mdx
@@ -1,4 +1,11 @@
-# Wie mache ich mit?
+# Guides
+
+- [Neues Fach zu einem Lehrstuhl hinzufügen](/docs/guides/neues-fach)
+
+Aber vorher gibt es einige Schritte die eigentlich immer gleich bleiben.
+Es bietet sich aber auch für Änderungen an, ein Issue zu schreiben.
+
+## Wie mache ich mit?
 
 Für viele scheint es das erste mal mit git, (eventuell Markdown), Typescript, next.js und GitHub zu arbeiten.
 
