--- a/docs/summary.mdx
+++ b/docs/summary.mdx
@@ -27,13 +27,13 @@ src/
 
 </div>
 
-### Grober Überblick
+### Markdown & Co
 
-Alle Zusammenfassungen auf HTWR werden mittles `.mdx` Datei geschrieben. Im Grunde einfach `Markdown` wie ihr es aus z.B. Obsidian kennt,
+Alle Zusammenfassungen auf HTWR werden mittels `.mdx` Datei geschrieben. Im Grunde einfach `Markdown` wie ihr es aus z.B. Obsidian kennt,
 bloß mit zusätzlichen features wie Javascript support und wichtiger für HTWR custom react component support.
 
-HTWR erkennt für bestehende Fächer automatisch neue Dateien im entsprechenden Fach ordner.
-Die Sortierung ist einleuchtent src -> summaries -> ( (umgekehrter) Lehrstuhlname ) -> ( Fachname ) -> (\*.mdx )
+HTWR erkennt für bestehende Fächer automatisch neue Dateien im entsprechenden Fach Ordner.
+Die Sortierung ist Einleuchtend src -> summaries -> ( (umgekehrter) Lehrstuhlname ) -> ( Fachname ) -> (\*.mdx )
 
 HTWR unterstützt die GitHub Markdown syntax inclusive
 
@@ -50,3 +50,11 @@ main = putStrLn "Hello, World!"
 für Code-Highlighting und
 \$ \sum\_\{k=1\}^n k = \frac\{n(n+1)\}\{2\} \$ wird zu $\sum_{k=1}^n k = \frac{n(n+1)}{2}$
 für LaTex Mathe. Sobald es möglich wird möchte ich auch typst einbinden, habe dafür aber noch nichts gefunden.
+
+## Die Frage des Lebens
+
+Wie das Känguru aus Känguru-Chroniken bereits sagte:
+
+> Witzig oder nicht Witzig
+
+Eine Zusammenfassung ist für den Author ein leeres Gemälde. Sie sollte irgendwo Inhalt haben, aber Kreativität und Humor ist auch gerne gesehen. Es ist eher eine Frage der Zeit und des Einfallsreichtum des Erstellers.
