--- a/summaries/es/swt/AllGemeinwissen.mdx
+++ b/summaries/es/swt/AllGemeinwissen.mdx
@@ -113,7 +113,7 @@ Make, Gradle etc. sind Build-Tools. Sie können automatisch die Abhängigkeiten 
 
 Hier falls es noch hilft eine kleine einführung in Makefiles:
 
-```Makefile
+```make
 # | target | dependencies | command |
 prog: data.o main.o # <- Abhängigkeiten
       cc data.o main.o –o prog # <- Befehl
