--- a/docs/frontend/components.mdx
+++ b/docs/frontend/components.mdx
@@ -4,10 +4,9 @@ title: Nützliche Komponenten
 
 # Nützlichen Komponenten
 
-im Aufbau... Aber basically:
-
-- `RWTH/Main`: Layout
-- `BasicSubjectInfo`: Links zu üblichen Sachen für ein Fach. E.g. panikzettel, folien-merge, ...
+- `/src/layouts`: Layouts. Alle habe eine ähnliche Schnittstelle
+  - `/src/layouts/rwth`: Wird von den meisten Lehrstühle verwendet. Orientiert sich an dem CMS System der RWTH
+- `BasicSubjectInfo`: Links zu üblichen Sachen für ein Fach. E.g. Panikzettel, folien-merge, ...
 - `SubjectDocumentList`: Tree view aller Dokumente für ein Fach unter `/public/content-assets/[subject]`
 - `SubjectList`: Auswahl zwischen mehreren Fächern.
 - `SummaryList`: Listet alle Zusammenfassungen des Fachs
