PSP Versuch 1 etwas weite ausgeführt (#49)
* PSP Versuch 1 etwas weite ausgeführt

* Update ErsterVersuch.mdx

* Richtiges update Date

* Angepasst an Kommentare

--- a/summaries/deddebme/psp/ErsterVersuch.mdx
+++ b/summaries/deddebme/psp/ErsterVersuch.mdx
@@ -1,11 +1,24 @@
 ---
 title: Der erste Versuch
 description: Wie macht man das?
-author: Nils Eisenach
-date: 05/12/2023
+author: Nils Eisenach, Adrian Schmitz
+date: 20/06/2024
 order: 3
-tags: [PSP, Versuch 1, ATmega 644]
+tags: [PSP, Versuch 1, ATmega 644, ADDA, DAW, DAC, ADC]
 ---
+
+# Einstellbare Spannungsquelle
+Wir, die HTWR übernehmen keine Verantwortung der Vollständigkeit noch der Richtigkeit der Sicherheitshinweise. Im Notfall immer einen Hiwi fragen. Ich lege euch sehr ans Herzen das Begleitende Dokument zu lesen.
+
+## Was ist das überhaupt?
+Das ist dieser Kasten neben euren PC der zwei Knaufe hat und euch erlaubt eine Spannung selbst einzustellen. Es mag verlockend sein die Knaufe auf Anschlag nach rechts zu drehen, aber: DONT!.
+
+## Sicherheit für euch, und die Hiwis und vor allem dem Microcontroller
+Bitte dreht den Spannungsregler (das ist dieser Linke Knauf an der Spannungsquelle) auf **maximal** 6 V (Volt), 5 V reichen aber komplett aus! Mehr brauchen wir nicht. Den Rechten Regler müsst ihr so einstellen das wir ungefähr 200 mA (Miliampere) haben. Stellt ihr mehr Stromstärke oder Spannung ein könnt ihr potenziell das Board kaputt machen! Lasst es einfach. Fragt einen Hiwi wenn ihr nicht sicher seid.
+
+## Wie stelle ich das jetzt aber ein?
+In der roten Box findet ihr zwei Kabel, Blau/Schwarz und Rot. Konvention in der Elektrotechnik ist: Rot ist Plus, Blau/Schwarz ist Minus. Zudem habt ihr noch ein drittes rotes Kabel das nicht wie die anderen beiden aussieht. Das braucht ihr um die Stromstärke richtig einzustellen.
+
 
 # W***AD DA***S
 ## AD
@@ -15,5 +28,13 @@ Einfach gesagt, benutzt man bei der Analog-Digital-Wandlung verschiedene Version
 3. Je nach Ergebnis, ist in $ref$ entweder eine Annäherung der Eingangsspannung oder $ref$ wird angepasst und man geht zu Schritt 2
 
 ### Tracking Wandler
+Der Tracking Wandler wandert entweder hoch oder runter. Er ist mit einem Counter realisiert.
 
-### Sukzessive-Approximation-Wandler
+### Sukzessive-Approximation-Wandler (SAR)
+Hier wird die Binäresuche genutzt. Macht euch zu nutze das wir hier mit Bits arbeiten und wir Zweierpotenzen haben.
+
+# Das ADDA-Board
+Das ist das größere grüne Board das ihr auf eurer PSP-Board stecken könnt. Zu Versuch 1 sollte das an jedem Platz oben liegen.
+
+## Wie passen da die anderen Kabel denn noch drauf?
+They don't. Du brauchst für den SAR und Tracking Wandler alleine nur das ADDA-Board. Das steckst du auf die richtigen Pins auf das PSP-Board.
