--- a/summaries/deddebme/psp/pspspspspsp.mdx
+++ b/summaries/deddebme/psp/pspspspspsp.mdx
@@ -28,7 +28,7 @@ tags: [PSP, Versuch 0, ATmega 644]
 Der ATmega 644 (das ist der große Chip in der Mitte vom Board), kann über seine Ports verschiedene Sachen ansteuern.
 An welchen Ports die Geräte genau angeschlossen sind, kann der Tabelle ganz unten in den Versuchsdokumenten entnommen werden, jedoch sind das die häufigsten Anschlüsse.
 
-1. Das LC~~D~~-Display: Häufig an PORTA oder PORTB
+1. Das LCD-Display: Häufig an PORTA oder PORTB
 2. Die Taster (Buttons): Eigentlich immer an PORTC (PINC7, PINC6, PINC1, PINC0)
 3. Die LEDs: Wenn genutzt, dann meistens an PORTD
 
@@ -132,4 +132,3 @@ void write_port_c(uint8_t val)
   PORTC = (PORTC & 0b11110000) | (val & 0b00001111); // schreibe die unteren 4 bits ohne die oberen zu ändern
 }
 ```
-
