fix: summarie math tildes and urls

--- a/summaries/syscom/datkom/Ethernet.mdx
+++ b/summaries/syscom/datkom/Ethernet.mdx
@@ -63,7 +63,7 @@ Hierfür kommmt zuerst das PAD-Feld, welches auch unteranderem das Frame padded 
   01101) und dem Rückwandeln danach
 </p>
 
-Und dann gibt es noch das Frame-Check-Sequence[FCS](CRC Check) also eine Prüfsumme mit [Cyclic-Redundency-Check](/syscom/studium/teachings/checksandbalance)
+Und dann gibt es noch das Frame-Check-Sequence[FCS](CRC Check) also eine Prüfsumme mit [Cyclic-Redundency-Check](https://de.wikipedia.org/wiki/Zyklische_Redundanzpr%C3%BCfung)
 
 Viel mehr gibt es zu Ethernet eigentlich auch nicht zu wissen außer natürlich das besondere Thema des [Medienzugriff](/syscom/studium/teachings/halt-haltmaldeinefressebitte)
 
