--- a/summaries/wsi/stocha/Einfach, Einfacher, Ordnungsstatistik.mdx
+++ b/summaries/wsi/stocha/Einfach, Einfacher, Ordnungsstatistik.mdx
@@ -60,10 +60,10 @@ $\hat{f}(x) = \begin{cases} 0 & x < 1 \\ \frac{\frac{5}{8}}{0.3} & x \in [1.0, 1
 Das $p$-Quantil ist der Wert $x_p$ mit $P(X \leq x_p) = p$.
 
 - $np$ ganzzahlig: Jede Zahl aus $[x_{(np)}, x_{(np+1)}]$
-- sonst: $\~{x}_p = x_{\lfloor np \rfloor +1}$
+- sonst: $\tilde{x}_p = x_{\lfloor np \rfloor +1}$
 
 **Qua _r_ tile** sind die Quantile:
-$Q_1 = \~{x}_{0,25}, Q_2 = \~{x}_{0,5}, Q_3 = \~{x}_{0,75}$
+$Q_1 = \tilde{x}_{0,25}, Q_2 = \tilde{x}_{0,5}, Q_3 = \tilde{x}_{0,75}$
 
 ## Boxplot
 
