feat: fix itsec paths

--- a/src/app/cesti/itsec/content.mdx
+++ b/src/app/cesti/itsec/content.mdx
@@ -3,5 +3,5 @@
 Ich achte tatsächlich drauf...
 Also ich versuche es zumindest. Deswegen gibt's auch noch keinen File Upload
 
-- [Material](./materials)
-- [Zusammenfassungen](./summaries)
+- [Material](/cesti/itsec/materials)
+- [Zusammenfassungen](/cesti/itsec/summaries)
