fix: turbopack & blog

--- a/blog/03.mdx
+++ b/blog/03.mdx
@@ -5,7 +5,7 @@ date: 2025-04-11
 
 # So funktioniert wieder der Bums
 
-Hat etwas gedauert aber jetzt laufen wieder ci/cd, Panikzettel Downloads (auch über htwr-aachen.de/panikzettel/${Name}.pdf), Aufgaben und Material Downloads
+Hat etwas gedauert aber jetzt laufen wieder ci/cd, Panikzettel Downloads (auch über htwr-aachen.de/panikzettel/$\{Name\}.pdf), Aufgaben und Material Downloads
 
 Ich habe mit Cloudflare Workers experimentiert, aber leider ist htwr bereits zu groß/komplex, sodass der kostenfreie Plan nichtmehr ausreicht.
 
