fix dbis & rename SchnellzugriffLink

--- a/src/app/sibd/dbis/page.mdx
+++ b/src/app/sibd/dbis/page.mdx
@@ -7,5 +7,9 @@ export const metadata = {
   },
 };
 
-[Material](./materials/)
-[Zusammenfassungen](./summaries)
+# Wir müssen alle mal durch
+
+<Schnellzugriff title="Was gibts?">
+	<SchnellzugriffLink href="/sibd/dbis/materials">Materialien</SchnellzugriffLink>
+	<SchnellzugriffLink href="/sibd/dbis/summaries">Zusammenfassungen</SchnellzugriffLink>
+</Schnellzugriff>
