--- a/summaries/syscom/mit/mac.mdx
+++ b/summaries/syscom/mit/mac.mdx
@@ -1,7 +1,7 @@
 ---
 title: MAC Nuggets
-description: MAC Layer
-tags: [layer 1]
+description: Medium Access Control
+tags: []
 order: 2
 author: Jonas Schneider
 ---
